[gd_scene load_steps=3 format=2]

[ext_resource path="res://GUI/guiTheme1.tres" type="Theme" id=1]
[ext_resource path="res://GUI/Main.gd" type="Script" id=2]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BgRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )

[node name="GenerateButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -112.0
margin_top = -65.0
margin_right = 112.0
margin_bottom = -35.0
theme = ExtResource( 1 )
toggle_mode = true
text = "Begin Conversation"

[node name="OutputText" type="RichTextLabel" parent="."]
anchor_left = 0.111
anchor_right = 0.889
anchor_bottom = 0.77
margin_left = 0.335991
margin_top = 40.0
margin_right = -0.33606
margin_bottom = 0.199982
focus_mode = 2
theme = ExtResource( 1 )
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="HSeperator1" type="HSeparator" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 178.0
margin_top = 502.0
margin_right = -179.0
margin_bottom = -94.0

[node name="QueueWorkerCheckForWorkTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="toggled" from="GenerateButton" to="." method="_on_GenerateButton_toggled"]
[connection signal="timeout" from="QueueWorkerCheckForWorkTimer" to="." method="_on_QueueWorkerCheckForWorkTimer_timeout"]
